src/DNI.Web/src/styles.scss
// Custom fonts
@import url('https://fonts.googleapis.com/css?family=Montserrat');

// Bootstrap 4
// Import local theme / variable overrides. You can customise this file to theme bootstrap 4 for this project
@import '_bootstrap-variables';
// Import remiaining bootstrap functionality
@import '~bootstrap/scss/bootstrap';

$footer-height: 250px;
$footer-margin: 40px;

html, body {
    margin: 0;
    padding: 0;
}
html {
    height: 100%;
    box-sizing: border-box;
    overflow-x: hidden;
    overflow-y: scroll;
}

body {
    background-image: url('assets/moth-bg.png');
    background-repeat: no-repeat;
    background-position: bottom $footer-height right;
    background-attachment: fixed;
    position: relative;
    margin: 0;
    min-height: 100%;
    padding-bottom: $footer-height + $footer-margin;
}

.card-img-top {
    max-width: 490px;
    max-height: 550px;
}

footer {
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: $footer-height;
    border-top: 1px solid $dark;
    padding: 3em 0;
    background-color: theme-color('primary');
    color: theme-color('light');

    a {
        color: theme-color('secondary');
        font-weight: bold;
        &:hover {
            color: theme-color('light');
            text-decoration: none;
        }
    }

    hr {
        color: theme-color('secondary');
        border-color: theme-color('secondary');
    }

    .footer-links {
    }
}

